[metadata]
name = blackjack
version = 0.1.0
description = Blackjack in the command line!
url = https://github.com/vugonz/blackjack-command-line
author = Gonçalo Azevedo

[options]
packages = find:
python_requires = >=3.7

[options.entry_points]
console_scripts =
    blackjack = blackjack.__main__:run
